Streamline index format (#21)
* wip assembly-less parsing

* rm/simplify some old functionality

* wip parsing with assemblies

* wip assembly parsing

* wip transformed coords

* wip transformed coords

* wip `ResidueGraph`

* wip `ResidueGraph`

* tests green-ish

* index is next

* stub for dumping residue pair data

* index file commit

* wip

* wip

* index merging fix

* all core & update tests green

* drop `Transformation` & recordify

* a bit compacter impl

* graph options

* wip thread pool

* Revert "a bit compacter impl"

This reverts commit 5fb5e7112f24c10ceef3220db78897250b8940a3.

* new stab at timing out queries properly & cleanup

* cleanup

* wip stub for dumping residue pair data

* docs

* cache `.values()` in enums

* smarter merging, question mark

* select from bundle stub

* fix `selectFromBundle`

* cleanup

* docs

* tweaks some intervals

* standardize rmsd naming

* cl & cleanup

* readme

* merge